feat: add material symbols and candlestick font

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -47,7 +47,8 @@
                     <!-- Переключатель графика в правом углу шапки карточки -->
                     <button mat-icon-button aria-label="Chart mode" (click)="toggleChart()"
                             [matTooltip]="isTv() ? 'Переключить на Lightweight' : 'Переключить на TradingView'">
-                        <mat-icon>{{ isTv() ? 'candlestick_chart' : 'show_chart' }}</mat-icon>
+                        <mat-icon *ngIf="isTv()" fontSet="material-symbols-outlined">candlestick_chart</mat-icon>
+                        <mat-icon *ngIf="!isTv()">show_chart</mat-icon>
                     </button>
                 </div>
             </div>
